samples/_failures_safe/1761296257_af0936_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f4e9e4f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6f4e9e4f.c:148:9: error: expected expression at end of input
  148 |         if (isalpha(current) || current == '_')
      |         ^~
./samples/SAFE/__tmp_6f4e9e4f.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f4e9e4f.c:148:9: error: expected declaration or statement at end of input
